examples/test/testpolicy19956.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19956
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key26: value37
      key18: value4
      key31: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value45
          key29: value0
          key23: value12
      podSelector:
        matchLabels:
          key19: value45
          key39: value34
